# zolai-ai

./: .dockerignore  .env.example  .gitignore  ADVANCED_LEARNING_FINAL_REPORT.md  AGENTS.md  API_KEYS_ACTIVATED.md  API_KEYS_UI_ADDED.md  APPROACHES_SUMMARY.md  BUILD_MASTER_README.md  CHANGELOG.md  COMPLETE_LEARNING_SYSTEM_SUMMARY.md  COMPLETION_CHECKLIST.md  CONTRIBUTING.md  CSRF_AND_API_KEYS_COMPLETE.md  CSRF_DEPLOYMENT_GUIDE.md  CSRF_IMPLEMENTATION_COMPLETE.md  CSRF_SETTINGS_TEST.md  CSRF_TESTING_RESULTS.md  DATASET_COMPLETE.md  DATASET_INDEX.txt  DATASET_READY.md  Dockerfile  FINAL_SOLUTION.md  GEMINI.md  GEMINI_AUTO_IMPORT_SETUP.md  GEMINI_CLI_USAGE.md  GEMINI_VALIDATION_GUIDE.md  GEMINI_VALIDATION_MANUAL.md  GEMINI_WEBAPI_RESULTS.json  GEMINI_WEBAPI_SETUP.md  INDEX.md  KAGGLE_NOTEBOOK_GUIDE.md  KAGGLE_ROADMAP.md  KAGGLE_UPLOAD_GUIDE.md  LEARNING_ARTIFACTS_INDEX.md  LEARNING_SYSTEM_FINAL_REPORT.md  LICENSE  LLM_TRAINING_GUIDE.md  LOCAL_DOCS.md  PHASE_1_FIXES_COMPLETED.md  (+78 more)
.github/: PULL_REQUEST_TEMPLATE.md
agents/: AGENT_PROMPTS.md  README.md  zolai-agents.yaml
artifacts/: FULL_AUDIT_2026_04_20.md  README.md  SYSTEM_STATUS.txt  advanced_learning_report.json  automated_fixes_report.json  bible_analysis_summary.json  competitive_audit_report.md  dictionary_analysis.md  discussion_group_findings.json  grammar_extraction_summary.json  local_translation_validation_report.json  master_synthesis_report.json  quick_security_audit.json  system_integration_report.json  unified_audit_report.md  verification_report.md  wiki_audit_discussion_report.json  wiki_audit_report.json  wiki_audit_results.md
config/: README.md  __init__.py  cpu_optimization.yaml  machine.py  package-lock.json  tools-setup.md  zolai-chat.service  zolai-telegram-bot.service  zolai_qwen_7b_lora.yaml
data/: ARCHIVE_MANIFEST.json  DATASET_MANIFEST.json  DATA_INDEX.md  README.md
docs/: ACTION_PLAN.md  AWS_DEPLOYMENT.md  DATA_AUDIT.md  DATA_IMPROVEMENT_PLAN.md  DATA_NAMING_GUIDE.md  DATA_NAMING_QUICK_REF.md  LOGS_AND_TMP.md  PROJECT_STRUCTURE.md  README.md  ROOT_STRUCTURE.md  SERVER_SETUP_GUIDE.md  ZOLAI_KAGGLE_OPENCLAW_GUIDE.md
kaggle_dataset/: README.md  dataset-metadata.json  kernel-metadata.json
kaggle_notebook_upload/: kaggle_notebook.ipynb  kernel-metadata.json
logs/: .gitkeep  README.md
notebooks/: README.md  kaggle-tongsan-cleaner.ipynb  kaggle-zolai-cleaner.ipynb  kernel-metadata.json  (+23 more)
(+7519 files in other folders)
