[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zolai"
version = "2.0.0"
description = "Unified Zolai language toolkit — crawl, clean, analyze, train, translate"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Peter", email = "peterpausianlian@gmail.com"},
]
keywords = ["zolai", "tedim", "chin", "language", "nlp", "llm", "translation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    # Core
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "aiofiles>=23.2",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    # Web/Crawler
    "duckduckgo-search>=5.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    # Data processing
    "pandas>=2.0,<3",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    # ML/Training
    "transformers>=4.45.0",
    "datasets>=2.19.0",
    "peft>=0.12.0",
    "trl>=0.9.0",
    "accelerate>=0.34.0",
    "bitsandbytes>=0.43.0",
    "torch>=2.1",
    "sentence-transformers>=2.2",
    # Visualization
    "matplotlib>=3.5,<3.10.1",
    "tqdm>=4.66",
    # Kaggle
    "kaggle>=1.6.0",
    "kagglehub>=0.3",
    "huggingface_hub>=0.21",
    # OCR
    "mistralai>=1.0",
]

[project.optional-dependencies]
gui = [
    "pygobject>=3.48",  # GTK3 bindings (may require system install: apt install python3-gi gir1.2-gtk-3.0)
]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    "mypy>=1.8",
]
full = [
    "zolai[gui]",
    "zolai[dev]",
]

[project.scripts]
zolai = "zolai.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = ["__pycache__", ".venv", "venv", "data", "runs"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
